force-app/main/default/objects/Department__c/fields/Department_Type__c.field-meta.xml
<CustomField>
    <fullName>Department_Type__c</fullName>
    <label>Department Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSC</fullName>
            </value>
            <value>
                <fullName>GOC</fullName>
            </value>
            <value>
                <fullName>GFT</fullName>
            </value>
            <value>
                <fullName>GTC</fullName>
            </value>
            <value>
                <fullName>Port</fullName>
            </value>
            <value>
                <fullName>Body Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>