force-app/main/default/objects/Department__c/fields/DistCode__c.field-meta.xml
<CustomField>
    <fullName>DistCode__c</fullName>
    <label>DistCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>