force-app/main/default/objects/Department__c/fields/MobisSuffix__c.field-meta.xml
<CustomField>
    <fullName>MobisSuffix__c</fullName>
    <label>MobisSuffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>