force-app/main/default/objects/Department__c/fields/NSC_Department__c.field-meta.xml
<CustomField>
    <fullName>NSC_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSC Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Department</relationshipLabel>
    <relationshipName>Department</relationshipName>
    <type>Lookup</type>
</CustomField>