force-app/main/default/objects/Department__c/fields/SAP_Key__c.field-meta.xml
<CustomField>
    <fullName>SAP_Key__c</fullName>
    <label>SAP Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>