force-app/main/default/objects/Department__c/recordTypes/Service_Center.recordType-meta.xml
<RecordType>
    <fullName>Service_Center</fullName>
    <active>true</active>
    <label>Service Center</label>
</RecordType>