force-app/main/default/objects/Department__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NSC_Department__c</columns>
    <columns>Department_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>